log
Thu 24 Aug 2023 08:16:11 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:7: error: statement with no effect [-Werror=unused-value]
   33 |   list->head;
      |   ~~~~^~~~~~
list.c:34:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |   list->size=0;
      |       ^~
list.c: In function ‘prevList’:
list.c:52:13: error: expected expression before ‘)’ token
   52 |   if(list ==)
      |             ^
list.c:54:1: error: control reaches end of non-void function [-Werror=return-type]
   54 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
93ff3c6
Thu 24 Aug 2023 08:23:30 PM UTC: 
 list.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:53:13: error: expected expression before ‘)’ token
   53 |   if(list ==)
      |             ^
list.c: In function ‘pushFront’:
list.c:65:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   65 |   list->size++;
      |       ^~
list.c: In function ‘prevList’:
list.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
   55 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1f6790e
Thu 24 Aug 2023 08:23:57 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:53:13: error: expected expression before ‘)’ token
   53 |   if(list ==)
      |             ^
list.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
   55 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f4e9989
Thu 24 Aug 2023 08:24:15 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|5
total_score: 10/70
4136fb5
Thu 24 Aug 2023 08:29:25 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
0a7ce5a
Thu 24 Aug 2023 08:44:00 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
7f2707f
Thu 24 Aug 2023 08:44:13 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
eff0f8f
Thu 24 Aug 2023 08:48:30 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:47:23: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   47 |   list->current = list->next;
      |                       ^~
Compilation failed
a4b0042
Thu 24 Aug 2023 08:49:01 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
5afd6a2
Thu 24 Aug 2023 08:49:38 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
32b1841
Thu 24 Aug 2023 08:49:49 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0be88b5
Thu 24 Aug 2023 08:50:39 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
96b498e
Thu 24 Aug 2023 08:51:48 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:47:7: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   47 |   list->next = list->current->next;
      |       ^~
Compilation failed
775ceed
Thu 24 Aug 2023 08:51:59 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
631a599
Thu 24 Aug 2023 08:53:29 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b7dae95
Thu 24 Aug 2023 08:54:12 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:48:17: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   48 |     return (list->next->data);
      |                 ^~
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
566f410
Thu 24 Aug 2023 08:54:27 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
ac9ac39
Thu 24 Aug 2023 08:55:17 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8c4ee28
Thu 24 Aug 2023 08:56:26 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
6b99373
Thu 24 Aug 2023 09:00:49 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
5cad345
Thu 24 Aug 2023 09:01:22 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  6|4
total_score: 25/70
1619756
Fri 25 Aug 2023 05:30:17 AM UTC: 
 list.c | 23 +++++++++++++++++++++--
 1 file changed, 21 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
93cf4d9
Fri 25 Aug 2023 05:31:54 AM UTC: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  6|4
total_score: 25/70
f2ab120
Fri 25 Aug 2023 05:32:13 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
311b20f
